[package]
name = "gachapon-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gachapon    = {path = "../"}
ergo-node-interface     = {path = "../../ergo-node-interface-rust"} #"0.2.6"
reqwest                 = {version ="0.10.9", features = ["blocking"]}